<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/realitve"
    android:layout_width="410dp"
    android:layout_height="600dp"
    tools:context=".view_Products_Activity">


    <ListView
        android:id="@+id/listViewProducts"
        android:layout_width="wrap_content"
        android:layout_height="470dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="23dp"
        android:layout_marginTop="107dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="26dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="68dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="29dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="314dp"
        android:layout_marginBottom="512dp"
        android:text="@string/lb_code"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/lb_code" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="78dp"
        android:layout_height="31dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="139dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="194dp"
        android:layout_marginBottom="512dp"
        android:text="@string/lb_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/lb_name" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="70dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="274dp"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="67dp"
        android:layout_marginBottom="510dp"
        android:text="@string/lb_price"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        tools:text="@string/lb_price" />
</RelativeLayout>